# marketing-mix-modeling

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
configs/: default.yaml
data/: .gitkeep
mmm_analytics/: __init__.py  cli.py  config.py
mmm_analytics/core/: __init__.py  features.py  model.py  optimizer.py  pipeline.py  transforms.py
mmm_analytics/data/: __init__.py  simulator.py
mmm_analytics/diagnostics/: __init__.py  metrics.py  plots.py
scripts/: run_demo.py
tests/: __init__.py  conftest.py  test_diagnostics.py  test_features.py  test_model.py  test_optimizer.py  test_pipeline.py  test_simulator.py  test_transforms.py
